@@ -10,33 +10,35 @@ static char *music_site_list[] =
 	"BestRadio 高雄港都983", "213",
 	"HitFm 聯播網 台中91.5", "88",
 	"HitFm 聯播網 高雄90.1", "90",
-	"HitFm聯播網台北91.7", "87",
+	"HitFm 聯播網 台北91.7", "87",
 	"KISS RADIO 南投廣播", "258",
 	"KISS RADIO 台南知音廣播", "255",
 	"KISS RADIO 大苗栗廣播", "256",
-	"KISS RADIO大眾廣播電台", "156",
-	"KISSRadio 網路音樂台", "308",
+	"KISS RADIO 大眾廣播電台", "156",
+	"KISS RADIO 網路音樂台", "308",
 	"中廣古典網", "162",
 	"中廣流行網", "205",
-	"中廣音樂網i radio", "206",
+	"中廣音樂網 i radio", "206",
 	"台北之音經典音樂台", "222",
 	"台北愛樂", "228",
 	"台灣之音-音樂", "313",
 	"太陽電台", "289",
 	"奇美古典音樂網", "294",
+    "寶島新聲廣播電台", "259",
 	NULL
 };
 
 static char *life_site_list[] =
 {
-	"ASIA FM92.3亞太電台", "295",
-    "ASIA FM92.7亞州電台", "210",
+	"ASIA FM92.3 亞太電台", "295",
+    "ASIA FM92.7 亞州電台", "210",
     "GOLD FM-台中城市廣播", "226",
     "GOLD FM-台北健康電台", "229",
     "IC之音", "148",
     "佳音廣播電台", "201",
     "佳音電台2台", "250",
     "全國廣播", "202",
+    "全國廣播音樂網", "338",
     "台中廣播", "230",
     "台北廣播電台- 都會資訊頻道", "208",
     "台北廣播電台喔海洋頻道", "238",
@@ -45,6 +47,7 @@ static char *life_site_list[] =
     "大愛網路電台", "325",
     "宜蘭中山電台", "301",
     "環宇廣播", "282",
+    "蒲公英聖樂網", "337",
     "警廣長青網", "271",
     "飛碟電台", "232",
 	NULL
@@ -54,7 +57,6 @@ static char *news_site_list[] =
 {
     "NEWS98新聞網", "187",
     "中廣新聞網", "207",
-    "綠色和平台灣文化廣播電台", "327",
 	NULL
 };
 
@@ -70,6 +72,7 @@ static char *others_site_list[] =
     "漢聲光華網-短波", "309",
     "漢聲廣播電台", "215",
     "漢聲廣播電台全國調頻網", "216",
+    "綠色和平台灣文化廣播電台", "327",
 	NULL
 };
 
@@ -87,7 +90,6 @@ static char *culture_site_list[] =
     "中廣客家頻道", "160",
     "大漢之音", "300",
     "寶島客家", "241",
-    "寶島新聲廣播電台", "259",
     "新客家廣播電台", "254",
     "高屏溪客家電台", "298",
 	NULL
@@ -108,17 +110,21 @@ static char *traffic_site_list[] =
 
 static char *live_site_list[] =
 {
-	"流行追蹤", "21",
+	"世棒2台", "603",
+	"世界盃棒球直播", "996",
+	"KuLife", "997",
+	"KuMovie", "998",
+	"KuDrama", "999",
+	"Bloomberg Television", "1001",
+	//"中視", "36",
 	"中天新聞台", "37",
 	"大愛電視台", "38",
 	"華視影音頻道", "50",
 	"生命電視台", "54",
 	"大愛電視二台", "57",
-	"世棒2台", "603",
-	"世棒1台", "996",
-	"KuLife", "997",
-	"KuMovie", "998",
-	"KuDrama", "999",
+	//"台灣樂起來(樂透開獎)", "58",
+	//"NOKIA音樂讓我說演唱會", "604",
+	"流行追蹤", "21",
 	NULL
 };
 #endif /* __SITE_LIST_H__ */
